--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,33 +1,25 @@
-### Hi there 👋, I'm Smokedy
+name: Generate Datas
 
-- 🔭 I’m currently working on a DLL injector
-- 🌱 I’m currently learning reverse engineering
+on:
+  schedule: # execute every 12 hours
+    - cron: "* */12 * * *"
+  workflow_dispatch:
 
-###
+jobs:
+  build:
+    name: Jobs to update datas
+    runs-on: ubuntu-latest
+    steps:
+      # Snake Animation
+      - uses: Platane/snk@master
+        id: snake-gif
+        with:
+          github_user_name: smokedy
+          svg_out_path: dist/github-contribution-grid-snake.svg
 
-<div>
-  <a href="https://github.com/smokedy">
-  <img height="180em" src="https://github-readme-stats.vercel.app/api?username=smokedy&show_icons=true&theme=tokyonight&include_all_commits=true&count_private=true">
-  <img heigth="180em" src="https://github-readme-stats.vercel.app/api/top-langs/?username=smokedy&layout=compact&langs_count=16&theme=tokyonight">
-</div>
-
-###
-  
-<div align="left">
-  <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" height="30" width="42" alt="python logo"  />
-  <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/c/c-original.svg" height="30" width="42" alt="c logo"  />
-  <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/cplusplus/cplusplus-original.svg" height="30" width="42" alt="cplusplus logo"  />
-  <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" height="30" width="42" alt="javascript logo"  />
-  <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/rust/rust-plain.svg" height="30" width="42" alt="rust logo"  />
-  <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linux/linux-original.svg" height="30" width="42" alt="linux logo"  />
-  <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mongodb/mongodb-original.svg" height="30" width="42" alt="mongodb logo"  />
-  <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original.svg" height="30" width="42" alt="mysql logo"  />
-</div>
-
-###
-
-<br clear="both">
-
-<img href="https://raw.githubusercontent.com/smokedy/smokedy/blob/output/snake.svg" alt="Snake animation"/>
-
-###
+      - uses: crazy-max/ghaction-github-pages@v2.1.3
+        with:
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
